[tool.poetry]
name = "protonvpn-gtk"
version = "2.0.1"
description = "Unofficial GTK 3 client for ProtonVPN"
authors = ["Kirill Karmadonov <kirill@live.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/karmadonov/protonvpn-gtk"
repository = "https://github.com/karmadonov/protonvpn-gtk"
keywords = ["protonvpn"]

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
